Handle MQTT exception in Message Handler; edit views for display

--- a/conf.ini
+++ b/conf.ini
@@ -16,3 +16,4 @@ interval = 5
 
 [msg]
 decode_error = Json decode error
+mqtt_error = MQTT broker is unavailable. Make sure MQTT that broker is working and its IP address is reachable.
