--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ test.db
 .idea/*
 *__pycache__*
 Presentation/WebUi/db.sqlite3
-DataAccess/__pycache__/*
+DataAccess/__pycache__/*DataAccess/__pycache__/__init__.cpython-35.pyc
