start implement scheduled display tasks

--- a/conf.ini
+++ b/conf.ini
@@ -14,6 +14,10 @@ broadcast = 192.168.1.255
 port = 11114
 interval = 5
 
+[scheduler]
+task_file = schedule_tasks.json
+schedule_interval = 5
+
 [msg]
 decode_error = Json decode error
 mqtt_error = MQTT broker is unavailable. Make sure MQTT that broker is working and its IP address is reachable.
