Untested implementation of PeriodicDisplayTasks
- add schedule task json with firt event
- create Tests.py for experimental purposes
- update records in conf.ini

--- a/conf.ini
+++ b/conf.ini
@@ -13,6 +13,7 @@ server_name = testServer
 broadcast = 192.168.1.255
 port = 11114
 interval = 5
+base_msg = esp_hub/device/
 
 [scheduler]
 task_file = schedule_tasks.json
