render and save plot in scheduler

--- a/conf.ini
+++ b/conf.ini
@@ -3,6 +3,7 @@ path = test.db
 # !!! List must be without white spaces !!!
 input_abilities = sensor
 output_abilities = display,switch,button
+default_records_limit = 300
 
 [mqtt]
 ip = 192.168.1.1
