add sending bitmap to MQTT - untested

--- a/conf.ini
+++ b/conf.ini
@@ -16,6 +16,10 @@ port = 11114
 interval = 5
 base_msg = esp_hub/device/
 
+[devices]
+ILI9341_width = 320
+ILI9341_height = 240
+
 [scheduler]
 task_file = schedule_tasks.json
 schedule_interval = 5
