add data file folder and new config entry

--- a/conf.ini
+++ b/conf.ini
@@ -4,6 +4,7 @@ path = test.db
 input_abilities = sensor
 output_abilities = display,switch,button
 default_records_limit = 300
+data_files_path = DataFiles/
 
 [mqtt]
 ip = 192.168.1.1
