config modification and ipaddr:port in CLI script

--- a/conf.ini
+++ b/conf.ini
@@ -1,3 +1,8 @@
+[main]
+# web user interface ip address and port
+ip = 127.0.0.1
+port = 8000
+
 [db]
 path = test.db
 # !!! List must be without white spaces !!!
