edit gitignore and configuration

--- a/conf.ini
+++ b/conf.ini
@@ -4,6 +4,7 @@ ip = 127.0.0.1
 port = 8000
 
 [db]
+db_system = sqlite
 path = test.db
 # !!! List must be without white spaces !!!
 input_abilities = sensor
@@ -23,11 +24,13 @@ interval = 5
 base_msg = esp_hub/device/
 
 [devices]
+# LCD display
 ILI9341_width = 320
 ILI9341_height = 240
 
 [scheduler]
 task_file = schedule_tasks.json
+# interval of checking pending scheduled tasks [in seconds]
 schedule_interval = 5
 
 [msg]
