--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 *__pycache__*
 Presentation/WebUi/db.sqlite3
 DataAccess/__pycache__/*DataAccess/__pycache__/__init__.cpython-35.pyc
+venv/*
+/*.egg-info
+
