Implement loading of db connection string from config; add comments into Config class

--- a/EspHubServer/conf.ini
+++ b/EspHubServer/conf.ini
@@ -5,7 +5,7 @@ port = 8000
 
 [db]
 db_system = sqlite
-path = test.db
+connection_string = sqlite:///esp_hub_db.sqlite3
 # !!! List must be without white spaces !!!
 input_abilities = sensor
 output_abilities = display,switch,button
