rename key in config because all GUI settings key must be unique; port -> discovery_port

--- a/EspHubServer/conf.ini
+++ b/EspHubServer/conf.ini
@@ -1,12 +1,10 @@
 [main]
-# web user interface ip address and port
 ip = 127.0.0.1
 port = 8000
 
 [db]
 db_system = sqlite
 connection_string = sqlite:///esp_hub_db.sqlite3
-# !!! List must be without white spaces !!!
 input_abilities = sensor
 output_abilities = display,switch,button
 default_records_limit = 300
@@ -19,20 +17,19 @@ server_name = testServer
 
 [discovery]
 broadcast = 192.168.1.255
-port = 11114
+discovery_port = 11114
 interval = 5
 base_msg = esp_hub/device/
 
 [devices]
-# LCD display
-ILI9341_width = 320
-ILI9341_height = 240
+ili9341_width = 320
+ili9341_height = 240
 
 [scheduler]
 task_file = schedule_tasks.json
-# interval of checking pending scheduled tasks [in seconds]
 schedule_interval = 5
 
 [msg]
 decode_error = Json decode error
 mqtt_error = MQTT broker is unavailable. Make sure MQTT that broker is working and its IP address is reachable.
+
