--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# ESP hub specific
+
+EspHubServer/esp_hub_db.sqlite3
+*/esp_hub_db.sqlite3
+
 
 # Created by https://www.gitignore.io/api/python,django
 
