improve logging func, integrate click, close #23

--- a/EspHubUnilib/conf.ini
+++ b/EspHubUnilib/conf.ini
@@ -1,11 +1,13 @@
 [common]
-broker-address = 192.168.1.1
-broker-port = 1883
+log-path = esp_hub_unilib.log
+device-name = test unilib device
+;broker-address = 192.168.1.1
+;broker-port = 1883
 
 [test]
 interval = 10
 function = run
-script_path = ability_functions
+script_path = ability_functions.py
 
 [test1]
 interval = 15
