reimplement device-server validation #45

--- a/EspHubServer/conf.ini
+++ b/EspHubServer/conf.ini
@@ -1,6 +1,7 @@
 [main]
 ip = 127.0.0.1
 port = 8000
+server_key_file = Keys/server_id
 
 [db]
 db_system = sqlite
@@ -11,7 +12,7 @@ default_records_limit = 300
 data_files_path = DataFiles/
 
 [mqtt]
-ip = 192.168.1.1
+ip = 193.179.108.146
 port = 1883
 server_name = testServer
 
