--- a/EspHubUnilib/conf.ini
+++ b/EspHubUnilib/conf.ini
@@ -1,8 +1,8 @@
 [common]
 log-path = esp_hub_unilib.log
 device-name = test unilib device
-;broker-address = 192.168.1.1
-;broker-port = 1883
+broker-address = 192.168.1.1
+broker-port = 1883
 
 [test]
 interval = 10
