--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 EspHubServer/esp_hub_db.sqlite3
 */esp_hub_db.sqlite3
 desktop.ini
+server_id
 
 # Created by https://www.gitignore.io/api/python,django
 
