add weather demo app to unilib

--- a/EspHubUnilib/conf.ini
+++ b/EspHubUnilib/conf.ini
@@ -4,13 +4,13 @@ device-name = test unilib device
 broker-address = 192.168.1.1
 broker-port = 1883
 
-[test]
-interval = 10
-function = run
+[weather_karvina]
+interval = 60
+function = weather_karvina
 script_path = ability_functions.py
 
-[test1]
-interval = 15
-function = run
+[weather_trinec]
+interval = 65
+function = weather_trinec
 script_path = ability_functions
 
