--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ EspHubServer/esp_hub_db.sqlite3
 */esp_hub_db.sqlite3
 desktop.ini
 server_id
+*.idea*
 
 # Created by https://www.gitignore.io/api/python,django
 
